"Fixed alignment on .sheet-abilities"

--- a/World-of-Dungeons/wodu.scss
+++ b/World-of-Dungeons/wodu.scss
@@ -53,7 +53,7 @@ label.sheet-text {
   }
   span {
     position:absolute;
-    font-size:1.2rem;
+    font-size:1rem;
   }
 }
 
@@ -71,7 +71,7 @@ label.sheet-number {
   }
   span {
     position:absolute;
-    font-size:1.2rem;
+    font-size:1rem;
   }
 }
 
@@ -112,6 +112,7 @@ label.sheet-skill {
     color: $bg-color;
   }
   span {
+    font-size: 1.4rem;
     padding: 0 0.5rem;
     cursor: pointer;
   }
@@ -120,6 +121,7 @@ label.sheet-skill {
 label.sheet-ability {
   padding: 0.2rem 1rem;
   margin: 0;
+  width: 1rem; /*fixes alignment for some reason?*/
   input {
     display: none;
 
@@ -129,7 +131,9 @@ label.sheet-ability {
     color: $bg-color;
   }
   span {
+    font-size: 1.4rem;
     padding: 0 0.5rem;
+    margin:0 !important;
     cursor: pointer;
   }
 }
@@ -269,17 +273,37 @@ input[type=number] {
   display: none;
 }
 button.repcontrol_add,
-button.repcontrol_edit,
-a.repcontrol_move,
-button.repcontrol_del {
-  font-size: 1.5rem;
+button.repcontrol_edit {
+  text-transform: uppercase;
+  font-size: 1rem;
   font-weight: bold;
-  border: none;
   background: $bg-color;
   color: $font-color;
   text-shadow: none;
   box-shadow: none;
-  &:hover {background: #e6c927;}
+  border: none;
+  &:hover {background: $accent-color}
+}
+a.repcontrol_move {
+  background: $font-color;
+  color: $bg-color;
+  text-shadow: none;
+  box-shadow: none;
+  border: none;
+  &:hover {
+    background: $accent-color;
+    color: $font-color;
+  }
+}
+button.repcontrol_del {
+  background: $danger-color;
+  text-shadow: none;
+  box-shadow: none;
+  border: none;
+  &:hover {
+    background: $accent-color;
+    color: $font-color;
+  }
 }
 textarea::-webkit-scrollbar {
     width: 0.3em;
@@ -296,11 +320,9 @@ textarea::-webkit-scrollbar-thumb {
   border-right: 1.5rem solid $success-color;
 }
 .sheet-rolltemplate-partial {
-  //color:$warning-color;
   border-right: 1.5rem solid $warning-color;
 }
 .sheet-rolltemplate-failure {
-  //color:$danger-color;
   border-right: 1.5rem solid $danger-color;
 }
 .sheet-rolltemplate-neutral {
@@ -329,7 +351,7 @@ textarea::-webkit-scrollbar-thumb {
       color:$bg-color;
       font-family: 'Coustard';
       font-weight: bold;
-      font-size: 2rem;
+      font-size: 1.7rem;
       border: none;
     }
   }
